fix spacing

--- a/scoring.css
+++ b/scoring.css
@@ -255,6 +255,6 @@ div.franchise-score {
     font-size: 1rem;
   }
   .player-stats {
-    font-size: 0.7rem;
+    font-size: 0.5rem;
   }
 }
